--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -35,4 +35,7 @@ dependencies {
     compile 'com.orhanobut:logger:1.15'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
 }
