add rxjava document

--- a/rxjava/src/main/AndroidManifest.xml
+++ b/rxjava/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".OperatorActivity" />
+        <activity android:name=".ApplyActivity"></activity>
     </application>
 
 </manifest>
