--- a/gson/build.gradle
+++ b/gson/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     compile 'com.orhanobut:logger:1.15'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+    compile 'com.google.code.gson:gson:2.8.1'
 }
