--- a/rxjava/build.gradle
+++ b/rxjava/build.gradle
@@ -38,4 +38,9 @@ dependencies {
 
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
+
+    compile 'com.google.code.gson:gson:2.8.1'
 }
