document: update document

--- a/greendao/build.gradle
+++ b/greendao/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'org.greenrobot.greendao' // apply plugin
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    buildToolsVersion '26.0.2'
 
 
     defaultConfig {
