--- a/atlas/build.gradle
+++ b/atlas/build.gradle
@@ -6,7 +6,7 @@ android {
 
 
     defaultConfig {
-        applicationId "com.guoxiaoxing.eventbus.demo"
+        applicationId "com.guoxiaoxing.atlas.demo"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
@@ -28,11 +28,9 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.0.0-beta1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
-    compile 'org.greenrobot:eventbus:3.1.1'
+    androidTestImplementation 'com.android.support.test:runner:0.5'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
 }
