--- a/gson/build.gradle
+++ b/gson/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.guoxiaoxing.gson.demo"
         minSdkVersion 15
